k8s/sharry/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sharry
  labels:
    app: sharry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sharry
  template:
    metadata:
      name: sharry
      labels:
        app: sharry
    spec:
      containers:
        - name: sharry
          image: eikek0/sharry:latest
          imagePullPolicy: IfNotPresent
          args:
            - /config/sharry.conf
          ports:
            - containerPort: 9090
          volumeMounts:
            - mountPath: /config
              name: sharry-conf
      restartPolicy: Always
      volumes:
        - name: sharry-conf
          configMap:
            name: sharry-conf
---
apiVersion: v1
kind: Service
metadata:
  name: sharry
spec:
  selector:
      app: sharry
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
