k8s/sharry/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: share
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`share.anshulg.com`)
      services:
        - name: sharry
          port: 9090
  tls:
    secretName: sharry-cert
    domains:
      - main: share.anshulg.com
